<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".presentation.settings_screen.SettingsScreenFragment"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/app_language"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/english"
            android:id="@+id/english_text_view"
            android:layout_weight="8"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/english_check_image"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_check" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/russian"
            android:id="@+id/russian_text_view"
            android:layout_weight="8"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/russian_check_image"
            android:layout_weight="1"
            android:layout_width="32dp"
            android:visibility="invisible"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_check" />


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/app_theme"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/blue_theme"
            android:id="@+id/blue_theme_text_view"
            android:layout_weight="8"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/blue_theme_check_image"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_check" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/violet_theme"
            android:id="@+id/violet_theme_text_view"
            android:layout_weight="8"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/violet_check_image"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_check" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/green_theme"
            android:id="@+id/green_theme_text_view"
            android:layout_weight="8"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/green_theme_check_image"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_check" />


    </LinearLayout>




</LinearLayout>